--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ footer a:hover {
     cursor: pointer;                   /* Cambia el cursor a pointer */
     transition: all 0.3s ease;         /* Suaviza las transiciones */
     margin-left: 20px;
+    text-align: center;
 }
 
 .boton-bisque:hover {
