--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,9 @@ footer a:hover {
     color: #333;               /* Color del texto */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para profundidad */
 }
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px; /* Ajusta el margen según lo necesario */
+}
